updated readme and added license

--- a/course/Exercise_1/page.html
+++ b/course/Exercise_1/page.html
@@ -68,7 +68,7 @@
         <article>
             <h3>1. Duckiebot Driving in a Straight Line</h3>
             <iframe src="image/videoplayback.webm" frameborder="0" allowfullscreen></iframe>
-            <p>This video demonstrates the Duckiebot driving in a straight line. We encountered some drift during this demo, likely caused by uneven motor speeds or calibration issues, and in some cases, misshaped or uneven wheels.</p>
+            <p>This video demonstrates the Duckiebot driving in a straight line. We encountered some small drift during this demo, likely caused by uneven motor speeds or calibration issues, but overall it went straight.</p>
         </article>
 
         <article>
@@ -103,7 +103,7 @@
     </section>
 
     <section>
-        <h2>Reflection and Comments</h2>
+        <h2>Write Up</h2>
         <p>
             This exercise involved setting up and calibrating the Duckiebot, as well as running demos to showcase its capabilities. Below are the key points:
         </p>
@@ -111,7 +111,7 @@
             <li>We faced challenges because of the newer version of Ubuntu, which required us to set up a virtual environment to download all the dependencies. This was essential for ensuring compatibility and avoiding installation issues.</li>
             <li>Drift during straight-line driving was partly due to uneven motor speeds, calibration issues, and even misshaped or uneven wheels, which were sometimes not perfectly round.</li>
             <li>In the lane-following demo, at the first corner, the Duckiebot struggled with turning and stayed at the center of the line. We theorized that this was caused by delays from the network, which was congested by too many people using the same connection. Additionally, the bot made a significant deviation to get back on track, indicating a delay between the computer and the robot's control systems. As the demo continued, the Duckiebot performed better and followed the lane more accurately.</li>
-            <li>Another challenge occurred when we were packing up, and our robot wouldn’t turn off. Despite trying several suggested solutions, we couldn’t resolve the issue. Adam, the instructor, even struggled to fix it and eventually had to unplug the robot manually for safety once we left.</li>
+            <li>Another challenge occurred when we were packing up, and our robot wouldn’t turn off. Despite trying several suggested solutions, we couldn’t resolve the issue. Adam even struggled to fix it and eventually had to unplug the robot manually once we left.</li>
             <li>The Duckiebot likely uses a combination of computer vision and control algorithms to follow the lane, balancing input from the camera and motor commands.</li>
         </ul>
         <p>
@@ -119,8 +119,6 @@
         </p>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Anthony's Duckiebot Lab</p>
-    </footer>
+
 </body>
 </html>
