--- a/course/Exercise_1/page.html
+++ b/course/Exercise_1/page.html
@@ -56,6 +56,21 @@
             font-size: 0.9em;
             color: #666;
         }
+
+        .references {
+            margin: 20px auto;
+            width: 80%;
+            text-align: left;
+        }
+
+        .references ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .references li {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -68,57 +83,65 @@
         <article>
             <h3>1. Duckiebot Driving in a Straight Line</h3>
             <iframe src="image/videoplayback.webm" frameborder="0" allowfullscreen></iframe>
-            <p>This video demonstrates the Duckiebot driving in a straight line. We encountered some small drift during this demo, likely caused by uneven motor speeds or calibration issues, but overall it went straight.</p>
+            <p>This video shows the Duckiebot driving in a straight line. Despite calibration, some drift was observed in its motion, likely caused by uneven wheels or misalignment in the motor speeds.</p>
         </article>
 
         <article>
             <h3>2. Lane Following Demo</h3>
             <iframe src="image/Exercise%201%20-%20lane%20follow.mp4" frameborder="0" allowfullscreen></iframe>
-            <p>The lane-following demo starts with the Duckiebot attempting to follow a lane. At the first corner, it had trouble turning and staying on track, possibly due to network delays caused by many people using the same network. The bot made a large deviation to get back on track, which further suggests that there were delays between the computer and robot connections. However, as the demo progressed, the Duckiebot was able to follow the lane more accurately.</p>
+            <p>This video shows the Duckiebot following a lane. Initially, it struggled at the first corner due to network delays and a significant deviation caused by the robot’s attempt to correct its path. The delay was likely due to too many people using the same network, affecting the communication between the robot and the computer. As the demo progressed, the Duckiebot followed the lane more accurately.</p>
         </article>
 
         <article>
             <h3>3. Camera Output and Motor Signals</h3>
             <img src="image/inputoutput.png" alt="Dashboard screenshot showing camera output and motor signals">
-            <p>This screenshot shows the camera output and motor signals on the dashboard, demonstrating the Duckiebot’s perception and motor control during operation.</p>
+            <p>This screenshot shows the Duckiebot's dashboard displaying the camera feed and motor signals during its operation. The image helps visualize the input from the camera and how the motor commands are generated.</p>
         </article>
 
         <article>
             <h3>4. Intrinsics Calibration File</h3>
             <img src="image/instrinstic.png" alt="Screenshot of intrinsics calibration.yaml">
-            <p>The intrinsics calibration file is crucial for ensuring the Duckiebot’s camera captures accurate images. Calibration helps with lens distortion and ensures that the camera’s field of view is correct.</p>
+            <p>This image shows the intrinsics calibration file in YAML format. This file is essential for calibrating the Duckiebot’s camera and ensuring that it can properly interpret the environment it navigates.</p>
         </article>
 
         <article>
             <h3>5. Extrinsics Calibration File</h3>
             <img src="image/extrinstic.png" alt="Screenshot of extrinsics calibration.yaml">
-            <p>This screenshot of the extrinsics calibration file shows the relationship between the Duckiebot’s camera and the robot’s coordinate system. Proper extrinsics calibration helps in the accurate mapping of the camera’s field of view to the robot’s physical movement.</p>
+            <p>This screenshot shows the extrinsics calibration file in YAML format. This calibration is necessary for aligning the camera's perspective with the Duckiebot's movement, enabling it to follow the lane accurately.</p>
         </article>
 
         <article>
             <h3>6. Duckiebot Greeting</h3>
             <img src="image/hello.png" alt="Screenshot of Duckiebot saying 'Hello from MY_ROBOT'">
-            <p>This image shows the Duckiebot greeting, displaying the message “Hello from MY_ROBOT.” This marks the successful initialization of the Duckiebot’s communication system and software.</p>
+            <p>This image shows the Duckiebot greeting, displaying "Hello from MY_ROBOT." It’s part of the Duckiebot's functionality to confirm that it is powered on and operational.</p>
         </article>
     </section>
 
     <section>
-        <h2>Write Up</h2>
+        <h2>Reflection and Comments</h2>
         <p>
             This exercise involved setting up and calibrating the Duckiebot, as well as running demos to showcase its capabilities. Below are the key points:
         </p>
         <ul>
-            <li>We faced challenges because of the newer version of Ubuntu, which required us to set up a virtual environment to download all the dependencies. This was essential for ensuring compatibility and avoiding installation issues.</li>
-            <li>Drift during straight-line driving was partly due to uneven motor speeds, calibration issues, and even misshaped or uneven wheels, which were sometimes not perfectly round.</li>
-            <li>In the lane-following demo, at the first corner, the Duckiebot struggled with turning and stayed at the center of the line. We theorized that this was caused by delays from the network, which was congested by too many people using the same connection. Additionally, the bot made a significant deviation to get back on track, indicating a delay between the computer and the robot's control systems. As the demo continued, the Duckiebot performed better and followed the lane more accurately.</li>
-            <li>Another challenge occurred when we were packing up, and our robot wouldn’t turn off. Despite trying several suggested solutions, we couldn’t resolve the issue. Adam even struggled to fix it and eventually had to unplug the robot manually once we left.</li>
+            <li>The purpose of calibrating the camera and motors is to ensure accurate perception and control of the Duckiebot.</li>
+            <li>Docker is useful as it provides an isolated and consistent environment for running the Duckiebot software. We also ran into issues due to newer versions of Ubuntu, which required creating a virtual environment to download all the necessary dependencies.</li>
+            <li>Drift during straight-line driving was often caused by wheels that were misshaped or uneven, affecting the accuracy of the bot’s movement.</li>
+            <li>In the lane-following demo, the Duckiebot initially struggled at the first corner. We theorized that this was caused by network delays due to too many people using the same network. This was further supported by the bot making a huge deviation to get back on track, suggesting a delay in communication between the computer and the robot. However, as the demo went on, the Duckiebot followed the lane quite well.</li>
+            <li>Another challenge occurred when we were packing up. Our robot wouldn’t turn off, despite trying various solutions. Not even Adam, who had more experience, could resolve it. He said he would manually unplug the robot safely when we left.</li>
             <li>The Duckiebot likely uses a combination of computer vision and control algorithms to follow the lane, balancing input from the camera and motor commands.</li>
         </ul>
         <p>
-            Key takeaways: Robots are not always perfect. Calibrating them is one thing, but external factors, such as uneven mats caused by accidental steps, can affect their performance. Calibration can also go wrong—our calibration box had tape peeling off on one side, which distorted the image and made it less flat. Robots are a lot of work, and I learned that instead of always blaming the code for issues, it's important to also consider hardware problems that could affect the robot's performance.
+            Key takeaways: Robots are not always perfect. While calibrating them is important, there will always be external factors that affect their performance, such as uneven mats on the road caused by accidental steps. Calibration could also be flawed, as seen with one side of the calibration box where the tape was coming off, causing the images not to be flat. Robots require a lot of work, and instead of always blaming the code when something doesn't work, I now recognize the importance of considering potential hardware issues with the robot.
         </p>
     </section>
 
-
+    <section class="references">
+        <h2>References</h2>
+        <ul>
+            <li><a href="https://docs-old.duckietown.org/daffy/duckietown-robotics-development/out/python_programs_environments.html" target="_blank">Duckietown Robotics Development - Python Programs & Environments</a></li>
+            <li><a href="https://docs.duckietown.com/daffy/opmanual-duckiebot/setup/setup_laptop/index.html" target="_blank">Duckiebot Setup - Setting Up Laptop</a></li>
+            <li>ChatGPT (OpenAI, 2025) - Assistance with writing and editing the write-up</li>
+        </ul>
+    </section>
 </body>
 </html>
