--- a/course/Exercise_1/page.html
+++ b/course/Exercise_1/page.html
@@ -118,7 +118,7 @@
     </section>
 
     <section>
-        <h2>Reflection and Comments</h2>
+        <h2>Write Up</h2>
         <p>
             This exercise involved setting up and calibrating the Duckiebot, as well as running demos to showcase its capabilities. Below are the key points:
         </p>
