--- a/course/Exercise_1/page.html
+++ b/course/Exercise_1/page.html
@@ -115,6 +115,11 @@
             <img src="image/hello.png" alt="Screenshot of Duckiebot saying 'Hello from MY_ROBOT'">
             <p>This image shows the Duckiebot greeting, displaying "Hello from MY_ROBOT." It’s part of the Duckiebot's functionality to confirm that it is powered on and operational.</p>
         </article>
+        <article>
+            <h3>7. kinematics.yaml file</h3>
+            <img src="image/kinematics.png" alt="Screenshot of Duckiebot saying 'Hello from MY_ROBOT'">
+            <p>This screenshot shows the kinematics calibrations file in YAML format.</p>
+        </article>
     </section>
 
     <section>
